[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/dialog_panel/DialogPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/slots_panel/SlotsPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/inventory_panel/InventoryUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/stats_panels/item_stats_panel/ItemStatsPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/chat_panel/ChatPanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/stats_panels/player_stats_panel/PlayerStatsPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/screen_overlay/ScreenOverlays.gd" type="Script" id=7]
[ext_resource path="res://assets/ui-textures/kenney_crosshairPack/PNG/White/crosshair003.png" type="Texture" id=8]

[node name="ScreenOverlays" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrossHair" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayersStatsPanel" parent="Top" instance=ExtResource( 6 )]
anchor_right = 0.0
margin_right = 994.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_top = 420.0
margin_right = 200.0
margin_bottom = 570.0
size_flags_vertical = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatPanel" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0.521569 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 200.0
margin_bottom = 150.0
rect_min_size = Vector2( 200, 150 )

[node name="Bottom" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 204.0
margin_top = 485.0
margin_right = 994.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_vertical = 8
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollectedItemsStatsPanel" parent="HBoxContainer/Bottom" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_right = 700.0
rect_min_size = Vector2( 0, 85 )
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="CurrentlyEquippedItemStatsPanel" parent="HBoxContainer/Bottom" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 704.0
margin_top = 0.0
margin_right = 790.0
margin_bottom = 85.0
size_flags_horizontal = 1

[node name="DialogPanel" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -287.76
margin_top = -49.8591
margin_right = 282.24
margin_bottom = -13.8591
size_flags_horizontal = 3

[node name="Inventory" parent="." instance=ExtResource( 3 )]
margin_left = 156.407
margin_top = 57.181
margin_right = -567.593
margin_bottom = -142.819
